adding port-2 file
with the update

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link rel="icon" type="image/png" href="images/20210213_141415.jpg">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VWX804FDNR"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9D77LJW85T"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-VWX804FDNR');
+  gtag('config', 'G-9D77LJW85T');
 </script>
 
 <body>
